--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
         <div class="max-width-wrap">
             <ul class="menu-nav">
                 <li>
-                   <a href=""> О компании</a>
+                   <a href="/"> О компании</a>
                 </li>
                 <li>
-                    <a href=""> Оптовикам и переработчикам</a>
+                    <a href="/optovikam.html"> Оптовикам и переработчикам</a>
                 </li>
                 <li>
-                    <a href=""> Сетям и ресторанам</a>
+                    <a href="/setevikam.html"> Сетям и ресторанам</a>
                 </li>
                 <li>
-                    <a href=""> Рознице</a>
+                    <a href="/roznice.html"> Рознице</a>
                 </li>
             </ul>
         </div>
